# FaithSum

./: LICENSE  README.md
amazon_belief_merging_codex/: README.md  pyproject.toml
amazon_belief_merging_codex/configs/aspect_packs/: beauty_personal_care.json  books_media.json  grocery_food.json
amazon_belief_merging_codex/data/: amazon_all_with_product_id.json
amazon_belief_merging_codex/src/amazon_belief_merging/: __init__.py  cli.py  discover_aspects.py  embeddings.py  evaluate_summary_scores.py  llm_refine.py  merge.py  sentiment.py  summarise.py
amazon_belief_merging_codex/src/amazon_belief_merging.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
configs/: aspects_amazon_general.json
configs/aspect_packs/: clothing_shoes.json  electronics.json  home_kitchen.json
data/: amazon.json
src/amazon_belief_merging/: __init__.py  extraction.py  pipeline.py  schema.py
src/amazon_belief_merging.egg-info/: PKG-INFO  requires.txt  top_level.txt
