[project]
name = "amazon-belief-merging"
version = "0.1.0"
description = "Belief-level aggregation for disagreement-aware Amazon review summarisation."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "nltk>=3.9.4",
  "gensim>=4.4.0",
  "python-dotenv>=1.0",
  "tqdm>=4.67.3"
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.7"]
llm = ["openai>=1.0"]
hf = ["datasets>=2.19", "huggingface_hub>=0.23", "transformers>=4.41", "torch>=2.1"]

[project.scripts]
amazon-belief-merge = "amazon_belief_merging.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
